--- a/erp/templates/html/menu.html
+++ b/erp/templates/html/menu.html
@@ -1,94 +1,89 @@
 {% extends 'html/base.html' %}
 
-{% block title %}Menu{% endblock %}
+{% block title %}
+  Menu
+{% endblock %}
 
 {% block module_styles %}
-{% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesMenu.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesBase.css' %}">
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'css/stylesMenu.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/stylesBase.css' %}" />
 {% endblock %}
 
 {% block content %}
-    <div class="container Set_Botones px-4 d-flex justify-content-center align-items-center">
-        <div class="row gx-5">
+  <div class="container Set_Botones px-4 d-flex justify-content-center align-items-center">
+    <div class="row gx-5">
+      <div class="col-md-6 col-lg-6">
+        <div class="p-3 Operaciones">
+          <!-- Configura el botón para redireccionar a gestorOperaciones -->
+          <a href="{% url 'erp:gestor-operaciones' %}" class="btn btn-operaciones d-flex flex-column align-items-center w-100">
+            <img src="{% static 'images/Operaciones.png' %}" alt="Texto alternativo de la imagen" class="mb-2" />
+            <span class="texto-blanco" style="color: white;">Operaciones</span>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <style>
+          /* Estilo para los botones con ancho y altura fijos */
+          .Botones button {
+            width: 200px; /* Ancho aumentado para hacerlos más cuadrados */
+            height: 200px; /* Altura deseada */
+            margin-right: 35px; /* Margen derecho para separar los botones */
+            margin-bottom: -20px; /* Margen inferior para separar los botones de la parte superior */
+          }
+        </style>
+
+        <div class="container Mantenimiento-Informe px-4 d-flex justify-content-center align-items-center">
+          <div class="row gy-5">
             <div class="col-md-6 col-lg-6">
-                <div class="p-3 Operaciones">
-                    <!-- Configura el botón para redireccionar a gestorOperaciones -->
-                    <a href="{% url 'erp:gestor-operaciones' %}" class="btn btn-operaciones d-flex flex-column align-items-center w-100">
-                        <img src="{% static 'images/Operaciones.png' %}" alt="Texto alternativo de la imagen" class="mb-2">
-                        <span class="texto-blanco" style="color: white;">Operaciones</span>
-                    </a>
-                </div>
+              <div class="p-3 Botones">
+                <button class="BotonMantenimiento" onclick="accionBoton()">
+                  <img src="{% static 'images/Mantenimiento.png' %}" alt="Texto alternativo de la imagen" />
+                  <br />
+                  Mantenimiento
+                </button>
+              </div>
             </div>
-            <div class="col">
-                <style>
-                    /* Estilo para los botones con ancho y altura fijos */
-                    .Botones button {
-                        width: 200px; /* Ancho aumentado para hacerlos más cuadrados */
-                        height: 200px; /* Altura deseada */
-                        margin-right: 35px; /* Margen derecho para separar los botones */
-                        margin-bottom: -20px; /* Margen inferior para separar los botones de la parte superior */
-                    }
-                </style>
-
-                <div class="container Mantenimiento-Informe px-4 d-flex justify-content-center align-items-center">
-                    <div class="row gy-5">
-                        <div class="col-md-6 col-lg-6">
-                            <div class="p-3 Botones">
-                                <button class="BotonMantenimiento"  onclick="accionBoton()">
-                                    <img src="{% static 'images/Mantenimiento.png' %}" alt="Texto alternativo de la imagen">
-                                    <br>
-                                    Mantenimiento
-                                </button>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-6">
-                            <div class="p-3 Botones">
-                                <button class="BotonOtro" onclick="accionBoton()">
-                                    <img src="{% static 'images/Informe.png' %}" alt="Texto alternativo de la imagen">
-                                    <br>
-                                    Documentos
-                                </button>
-                            </div>
-                        </div>                            
-                    </div>
-                </div>
-
-                <div class="container RRHH_INVENTARIO px-4 d-flex justify-content-center align-items-center">
-                    <div class="row gy-5">
-                        <div class="col-md-6 col-lg-6">
-                            <div class="p-3 Botones">
-                                <button class="BotonOtro" onclick="accionBoton()">
-                                    <img src="{% static 'images/Inventario.png' %}" alt="Texto alternativo de la imagen">
-                                    <br>
-                                    Inventario
-                                </button>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-6">
-                            <div class="p-3 Botones">
-                                <button class="BotonOtro" onclick="accionBoton()">
-                                    <img src="{% static 'images/RRHH.png' %}" alt="Texto alternativo de la imagen">
-                                    <br>
-                                    Recursos humanos
-                                </button>
-                            </div>
-                        </div>                            
-                    </div>
-                </div>
+            <div class="col-md-6 col-lg-6">
+              <div class="p-3 Botones">
+                <button class="BotonOtro" onclick="accionBoton()">
+                  <img src="{% static 'images/Informe.png' %}" alt="Texto alternativo de la imagen" />
+                  <br />
+                  Documentos
+                </button>
+              </div>
             </div>
-        </div>  
+          </div>
+        </div>
+
+        <div class="container RRHH_INVENTARIO px-4 d-flex justify-content-center align-items-center">
+          <div class="row gy-5">
+            <div class="col-md-6 col-lg-6">
+              <div class="p-3 Botones">
+                <button class="BotonOtro" onclick="accionBoton()">
+                  <img src="{% static 'images/Inventario.png' %}" alt="Texto alternativo de la imagen" />
+                  <br />
+                  Inventario
+                </button>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+              <div class="p-3 Botones">
+                <button class="BotonOtro" onclick="window.location.href='{% url 'erp:gestor-personal' %}'">
+                  <img src="{% static 'images/RRHH.png' %}" alt="Texto alternativo de la imagen" />
+                  <br />
+                  Recursos humanos
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <script>
-        // Función de ejemplo accionBoton
-        function accionBoton() {
-            // Tu lógica aquí
-        }
-    </script>
+  </div>
 {% endblock %}
 
 {% block module_scripts %}
-    <!-- Scripts específicos de la página de menú -->
-    <script src="{% static 'js/scriptMenu.js' %}"></script>
+  <!-- Scripts específicos de la página de menú -->
+  <script src="{% static 'js/scriptMenu.js' %}"></script>
 {% endblock %}
